--- a/gameplay.html
+++ b/gameplay.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">5mintѕuє</a>
@@ -20,7 +19,11 @@
         <div class="menu">
             <i class="bi bi-search search-icon" id="searchIcon"></i>
             <div class="dropdown" id="searchDropdown">
-                <input type="text" class="form-control" id="searchInput" placeholder="Search..." style="display: none;">
+                <!-- 검색창 -->
+                <div class="input-group">
+                    <input type="text" class="form-control" id="searchInput" placeholder="Search..." style="display: none;">
+                    <button class="btn btn-primary" id="searchButton" style="display: none;">검색</button>
+                </div>
             </div>
             <div class="dropdown">
                 <a class="btn btn-secondary dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
@@ -31,7 +34,7 @@
                     <li><a class="dropdown-item" href="#">퍼즐</a></li>
                     <li><a class="dropdown-item" href="#">시뮬레이션</a></li>
                     <li><a class="dropdown-item" href="#">스포츠</a></li>
-                    <li><a class="dropdown-item" href="#">아케이드</a></li>
+                    <li><a class="dropdown-item" href="#">슈팅</a></li>
                     <li><a class="dropdown-item" href="#">액션</a></li>
                     <li><a class="dropdown-item" href="#">타이쿤</a></li>
                     <li><a class="dropdown-item" href="#">카드</a></li>
@@ -39,7 +42,7 @@
                     <li><a class="dropdown-item" href="#">all</a></li>
                 </ul>
             </div>
-            <a href="#">시대별</a>
+            <a href="byera.html">시대별</a>
         </div>
     </nav>
   
@@ -73,6 +76,7 @@
         </div>
 
     </main>
+    <script src="js/nav.js"></script>
     <script src="js/data.js"></script>
     <script src="js/gameplay.js"></script>
     <script src="js/comment.js"></script>
