--- a/tt.html
+++ b/tt.html
@@ -1,43 +1,54 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        .line {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            border-top: 5px solid black;
-            position: relative;
-            height: 20px;
-            margin-top: 100px;
-        }
 
-        .line:nth-child(n+2) {
-            margin-top: 200px;
-        }
-        .dot {
-            width: 13px;
-            height: 13px;
-            background-color: black;
-            border-radius: 50%;
-            position: absolute;
-            top: -10px;
-        }
-    </style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>5mintѕuє</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-    <div class="line">
-        <div class="dot" style="left: 250px;"></div>
-        <div class="dot" style="left: 500px;"></div>
-        <div class="dot" style="left: 750px;"></div>
-        <div class="dot" style="left: 1000px;"></div>
-    </div>
-
-    <div class="line">
-        <div class="dot" style="left: 250px;"></div>
-        <div class="dot" style="left: 500px;"></div>
-        <div class="dot" style="left: 750px;"></div>
-        <div class="dot" style="left: 1000px;"></div>
-    </div>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">5mintѕuє</a>
+        </div>
+        <div class="menu">
+            <i class="bi bi-search search-icon" id="searchIcon"></i>
+            <div class="dropdown" id="searchDropdown">
+                <!-- 검색창 -->
+                <div class="input-group">
+                    <input type="text" class="form-control" id="searchInput" placeholder="Search..." style="display: none;">
+                    <button class="btn btn-primary" id="searchButton" style="display: none;">검색</button>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                    장르별
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">롤플레잉</a></li>
+                    <li><a class="dropdown-item" href="#">퍼즐</a></li>
+                    <li><a class="dropdown-item" href="#">시뮬레이션</a></li>
+                    <li><a class="dropdown-item" href="#">스포츠</a></li>
+                    <li><a class="dropdown-item" href="#">슈팅</a></li>
+                    <li><a class="dropdown-item" href="#">액션</a></li>
+                    <li><a class="dropdown-item" href="#">타이쿤</a></li>
+                    <li><a class="dropdown-item" href="#">카드</a></li>
+                    <li><a class="dropdown-item" href="#">퀴즈</a></li>
+                    <li><a class="dropdown-item" href="#">all</a></li>
+                </ul>
+            </div>
+            <a href="#">시대별</a>
+        </div>
+    </nav>
+    <script src="js/nav.js"></script>
+    
 </body>
+
 </html>
