--- a/gameplay.html
+++ b/gameplay.html
@@ -32,7 +32,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">롤플레잉</a></li>
                     <li><a class="dropdown-item" href="#">퍼즐</a></li>
-                    <li><a class="dropdown-item" href="#">시뮬레이션</a></li>
+                    <li><a class="dropdown-item" href="#">아케이드</a></li>
                     <li><a class="dropdown-item" href="#">스포츠</a></li>
                     <li><a class="dropdown-item" href="#">슈팅</a></li>
                     <li><a class="dropdown-item" href="#">액션</a></li>
@@ -45,6 +45,7 @@
             <a href="byera.html">시대별</a>
         </div>
     </nav>
+    
   
     <main id="gameplay" class="container">
         <div class="image-info-groups ">
@@ -81,6 +82,7 @@
     <script src="js/gameplay.js"></script>
     <script src="js/comment.js"></script>
     <script src="js/gameshelf.js"></script>
+    <script src="js/search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
