--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </nav>
     <div class="genertitle container" id="selectedText">
-        <div id="selectedItemDisplay" style="color: aquamarine;"></div>
+        <div class="selectedItemDisplay" id="selectedItemDisplay"></div>
        <hr>
      </div>
      <p id="noResultsMessage" class="search-none" style="display: none;">검색한 내용이 없습니다</p>
