--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </div>
     </nav>
     <div class="genertitle container" id="selectedText">
-        <div class="selectedItemDisplay" id="selectedItemDisplay"></div>
-       <hr>
+        <div class="selectedItemDisplay" id="selectedItemDisplay">all</div>
      </div>
+     <hr>
      <p id="noResultsMessage" class="search-none" style="display: none;">검색한 내용이 없습니다</p>
 
     <main class="gameshelf">
@@ -61,7 +61,7 @@
     
     <script src="js/data.js"></script>
     <script src="js/gameshelf.js"></script>
-    <script src="js/nav.js"></script>9
+    <script src="js/nav.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
