[1] [2]이거 진짜 완성

--- a/byera.html
+++ b/byera.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5mintѕuє</title>
     <title>Bootstrap Example</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/byera.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/nav.css">
+
+    <link rel="icon" href="images\icon.png" />
+    <link rel="apple-touch-icon" href="images\icon.png" />
 </head>
 <body>
 
@@ -263,23 +267,32 @@
             </div>
         </div>
 
-        <div class="guide-container">
-            <div class="gamePhoto">
-                <img src="" alt="Photo 1">
-            </div>
-            
-            <div class="items-container">
-                <div class="items">
-                    <div class="gameName">게임설명</div>
-                </div>
-                <div class="items">
-                    <div class="gameGuide">1줄 설명</div>
-                </div>
-            </div>
-        </div> 
 
     </div>
 
+    <footer class="main-footer" id="Footer">
+        <div class="developerFooter">
+            <h4 class="footerTitle">Developer info</h4>
+            <ul>
+                <li>김민주✉w2221@e-mirim.hs.kr</li>
+                <br>
+                <li>김윤하✉w2224@e-mirim.hs.kr</li>
+            </ul>
+        </div>
+        <div class="schoolFooter">
+            <h4 class="footerTitle">School info</h4>
+            <ul>
+                <li>
+                    미림여자정보과학고등학교(08821) 서울시 관악구 호암로 546 (신림동)
+                </li>
+                <br>
+                <li>546 Hoam-ro, Gwanak-gu, Seoul, 08821 Korea</li>
+            </ul>
+            <a href="https://github.com/kimmyounha/WSM_Project_Mintsue5" target="_blank"><i class="bi footer-icon bi-github"></i></a>
+            <a href="https://www.instagram.com/mirim_student/" target="_blank"><i class="bi footer-icon bi-instagram"></i></a>
+            <a href="https://ko-kr.facebook.com/emirimhs/" target="_blank"><i class="bi footer-icon bi-facebook"></i></a>
+        </div>
+    </footer>
     <script src="js/byera.js"></script>
     <script src="js/data.js"></script>
     <script src="js/gameshelf.js"></script>
