--- a/gameplay.html
+++ b/gameplay.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/gameplay.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/nav.css">
+
+    <link rel="icon" href="images\icon.png" />
+    <link rel="apple-touch-icon" href="images\icon.png" />
 </head>
 <body>
     <nav class="navbar">
@@ -60,14 +63,23 @@
                 .book-image
             </div>
         </div>
-        <div class=""><hr>의견 쓰기
+        의견 쓰기
+        <div class="comment-reg">
             <div class="comment-form">
-                <form action="" method="post">
-                    <textarea class="comment-input" name="comment" placeholder="주제와 무관한 댓글이나, 악플은 경고조치 없이 삭제되며 징계 대상이 될 수 있습니다."></textarea>
-                    <button type="submit">등록</button>
+                <form id="commentForm" action="" method="post">
+                    <textarea class="comment-input" id="commentInput" name="comment" placeholder="주제와 무관한 댓글이나, 악플은 경고조치 없이 삭제되며 징계 대상이 될 수 있습니다."></textarea>
+                    <br>
+                    <div class="row">
+                        <div class="col-lg-10 col-md-9">
+                            Column
+                        </div>
+                        <div class="col-lg-2 col-md-3">
+                            <button class="comment-button" id="submitButton" type="submit">등록</button>
+                        </div>
+                    </div>
                 </form>
             </div>
-        </div>
+        </div>        
 
         <div class="comment-box">
             <img class="profile-image" src="images/11.수박게임.png" alt="프로필 이미지">
