--- a/gameplay.html
+++ b/gameplay.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gameplay</title>
+    <title>5mintѕuє</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/gameplay.css">
@@ -41,7 +41,6 @@
                     <li><a class="dropdown-item" href="#">액션</a></li>
                     <li><a class="dropdown-item" href="#">타이쿤</a></li>
                     <li><a class="dropdown-item" href="#">카드</a></li>
-                    <li><a class="dropdown-item" href="#">퀴즈</a></li>
                     <li><a class="dropdown-item" href="#">all</a></li>
                 </ul>
             </div>
@@ -63,19 +62,17 @@
                 .book-image
             </div>
         </div>
-        의견 쓰기
+
+        <div class="border-1"></div>
+
+        <div class="write">의견 쓰기</div>
         <div class="comment-reg">
             <div class="comment-form">
                 <form id="commentForm" action="" method="post">
                     <textarea class="comment-input" id="commentInput" name="comment" placeholder="주제와 무관한 댓글이나, 악플은 경고조치 없이 삭제되며 징계 대상이 될 수 있습니다."></textarea>
                     <br>
                     <div class="row">
-                        <div class="col-lg-10 col-md-9">
-                            Column
-                        </div>
-                        <div class="col-lg-2 col-md-3">
-                            <button class="comment-button" id="submitButton" type="submit">등록</button>
-                        </div>
+                        <button class="comment-button" id="submitButton" type="submit">등록</button>
                     </div>
                 </form>
             </div>
@@ -87,8 +84,31 @@
                 <p>주제와 관련된 댓글 내용이 이 곳에 들어갑니다.</p>
             </div>
         </div>
-
     </main>
+    <footer class="main-footer" id="Footer">
+        <div class="developerFooter">
+            <h4 class="footerTitle">Developer info</h4>
+            <ul>
+                <li>김민주✉w2221@e-mirim.hs.kr</li>
+                <br>
+                <li>김윤하✉w2224@e-mirim.hs.kr</li>
+            </ul>
+        </div>
+        <div class="schoolFooter">
+            <h4 class="footerTitle">School info</h4>
+            <ul>
+                <li>
+                    미림여자정보과학고등학교(08821) 서울시 관악구 호암로 546 (신림동)
+                </li>
+                <br>
+                <li>546 Hoam-ro, Gwanak-gu, Seoul, 08821 Korea</li>
+            </ul>
+            <a href="https://github.com/kimmyounha/WSM_Project_Mintsue5" target="_blank"><i class="bi footer-icon bi-github"></i></a>
+            <a href="https://www.instagram.com/mirim_student/" target="_blank"><i class="bi footer-icon bi-instagram"></i></a>
+            <a href="https://ko-kr.facebook.com/emirimhs/" target="_blank"><i class="bi footer-icon bi-facebook"></i></a>
+        </div>
+    </footer>
+
     <script src="js/nav.js"></script>
     <script src="js/data.js"></script>
     <script src="js/gameplay.js"></script>
