btn-byera js 거의 완성

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
      <hr>
      <p id="noResultsMessage" class="search-none" style="display: none;">검색한 내용이 없습니다</p>
 
-    <main class="gameshelf">
-    </main>
+    <main class="gameshelf"></main>
 
     <ul class="pagination">
         <!-- [1] [2] 이런거 들어감 -->
