--- a/byera.html
+++ b/byera.html
@@ -229,31 +229,28 @@
         </div>
 
         <!-- #연도별 버튼 생성 -->
-        <div class="photo-container">
-
+        <div class="photo-containe container">
             <div class="button-container">
-                <div class="button-items">
-                    <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="1980">#1980</button>
-                    <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="1990">#1990</button>
-                    <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="1995">#1995</button>
-                    <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="2000">#2000</button>
-                </div>
-                
-                <div class="button-items">
-                    <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="2005">#2005</button>
-                    <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="2010">#2010</button>
-                    <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="2015">#2015</button>
-                    <button type="button" class="btn active" data-bs-toggle="button" aria-pressed="true" id="2020">#2020</button>
-                </div>                             
+                <button type="button" class="btn-era">#1980</button>
+                <button type="button" class="btn-era">#1990</button>
+                <button type="button" class="btn-era">#1995</button>
+                <button type="button" class="btn-era">#2000</button>
+                <button type="button" class="btn-era">#2005</button>
+                <button type="button" class="btn-era">#2010</button>
+                <button type="button" class="btn-era">#2015</button>
+                <button type="button" class="btn-era">#2020</button>                  
             </div>
         </div>
-
-        <div class="textbox">#2020</div>
-
+        
     </div>
 
-    <script src="js/data.js"></script>
-    <script src="js/byera.js"></script>
+    <div class="byeratitle container" id="selectedText">
+        <div class="selectedItembyera" id="selectedItembyera">all</div>
+     </div>
+    <main class="gamebyerashelf container">
+        <!-- Game information will be displayed here -->
+    </main>  
+
     <footer class="main-footer" id="Footer">
         <div class="developerFooter">
             <h4 class="footerTitle">Developer info</h4>
@@ -279,7 +276,9 @@
     </footer>   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/gameshelf.js"></script>
+    <script src="js/byera.js"></script>
 </body>
 </html>
