--- a/gameplay.html
+++ b/gameplay.html
@@ -47,11 +47,10 @@
             <a href="byera.html">시대별</a>
         </div>
     </nav>
-    
-  
+
     <main id="gameplay" class="container">
         <div class="image-info-groups ">
-            <div class="info ">
+            <div class="titles">
                 <div class="title">
                 </div>
                 <div class="title">
@@ -62,29 +61,29 @@
                 .book-image
             </div>
         </div>
-
-        <div class="border-1"></div>
-
         <div class="write">의견 쓰기</div>
         <div class="comment-reg">
             <div class="comment-form">
                 <form id="commentForm" action="" method="post">
                     <textarea class="comment-input" id="commentInput" name="comment" placeholder="주제와 무관한 댓글이나, 악플은 경고조치 없이 삭제되며 징계 대상이 될 수 있습니다."></textarea>
-                    <br>
                     <div class="row">
                         <button class="comment-button" id="submitButton" type="submit">등록</button>
                     </div>
                 </form>
             </div>
-        </div>        
-
-        <div class="comment-box">
-            <img class="profile-image" src="images/11.수박게임.png" alt="프로필 이미지">
+        </div>
+        <div class="comment1-box">
+            <img class="profile-image" src="images/1.수박게임.png" alt="프로필 이미지">
             <div class="comment-content">
-                <p>주제와 관련된 댓글 내용이 이 곳에 들어갑니다.</p>
+                주제와 관련된 댓글 내용이 이 곳에 들어갑니다.
             </div>
         </div>
+        <div class="comment1-container">
+            <!-- Comments will be dynamically added here -->
+        </div>
+        
     </main>
+
     <footer class="main-footer" id="Footer">
         <div class="developerFooter">
             <h4 class="footerTitle">Developer info</h4>
