--- a/gameplay.html
+++ b/gameplay.html
@@ -57,8 +57,8 @@
                     .title
                 </div>
             </div>
-            <div class="book-image">
-                .book-image
+            <div class="game-image">
+                .game-image
             </div>
         </div>
         <div class="write">의견 쓰기</div>
@@ -72,16 +72,17 @@
                 </form>
             </div>
         </div>
-        <div class="comment1-box">
-            <img class="profile-image" src="images/1.수박게임.png" alt="프로필 이미지">
-            <div class="comment-content">
-                주제와 관련된 댓글 내용이 이 곳에 들어갑니다.
+        <div class="comment-box">
+            <div class="comment1-box">
+                <img class="profile-image" src="images/profile/comment-img1.png" alt="프로필 이미지">
+                <div class="comment-content">
+                    와 너무 재밌어요! 별 5개 드림 ⭐⭐⭐⭐⭐
+                </div>
+            </div>
+            <div class="comment1-container">
+                <!-- Comments will be dynamically added here -->
             </div>
         </div>
-        <div class="comment1-container">
-            <!-- Comments will be dynamically added here -->
-        </div>
-        
     </main>
 
     <footer class="main-footer" id="Footer">
