--- a/gameplay.html
+++ b/gameplay.html
@@ -79,6 +79,12 @@
                     와 너무 재밌어요! 별 5개 드림 ⭐⭐⭐⭐⭐
                 </div>
             </div>
+            <div class="comment1-box">
+                <img class="profile-image" src="images/profile/comment-img5.png" alt="프로필 이미지">
+                <div class="comment-content">
+                    도여니의 말
+                </div>
+            </div>
             <div class="comment1-container">
                 <!-- Comments will be dynamically added here -->
             </div>
