--- a/gameplay.html
+++ b/gameplay.html
@@ -82,7 +82,7 @@
             <div class="comment1-box">
                 <img class="profile-image" src="images/profile/comment-img5.png" alt="프로필 이미지">
                 <div class="comment-content">
-                    도여니의 말
+                    30년만에 깼습니다 라쿤귀여워 &gt;&lt;
                 </div>
             </div>
             <div class="comment1-container">
